// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`refractor elements Boolean JSON Schema support should refract to semantic ApiDOM tree 1`] = `
{
  "element": "JSONSchemaDraft6",
  "content": [
    {
      "element": "member",
      "meta": {
        "classes": {
          "element": "array",
          "content": [
            {
              "element": "string",
              "content": "fixed-field"
            }
          ]
        }
      },
      "content": {
        "key": {
          "element": "string",
          "content": "additionalItems"
        },
        "value": {
          "element": "boolean",
          "meta": {
            "classes": {
              "element": "array",
              "content": [
                {
                  "element": "string",
                  "content": "boolean-json-schema"
                }
              ]
            }
          },
          "content": true
        }
      }
    },
    {
      "element": "member",
      "meta": {
        "classes": {
          "element": "array",
          "content": [
            {
              "element": "string",
              "content": "fixed-field"
            }
          ]
        }
      },
      "content": {
        "key": {
          "element": "string",
          "content": "items"
        },
        "value": {
          "element": "boolean",
          "meta": {
            "classes": {
              "element": "array",
              "content": [
                {
                  "element": "string",
                  "content": "boolean-json-schema"
                }
              ]
            }
          },
          "content": true
        }
      }
    },
    {
      "element": "member",
      "meta": {
        "classes": {
          "element": "array",
          "content": [
            {
              "element": "string",
              "content": "fixed-field"
            }
          ]
        }
      },
      "content": {
        "key": {
          "element": "string",
          "content": "contains"
        },
        "value": {
          "element": "boolean",
          "meta": {
            "classes": {
              "element": "array",
              "content": [
                {
                  "element": "string",
                  "content": "boolean-json-schema"
                }
              ]
            }
          },
          "content": true
        }
      }
    },
    {
      "element": "member",
      "meta": {
        "classes": {
          "element": "array",
          "content": [
            {
              "element": "string",
              "content": "fixed-field"
            }
          ]
        }
      },
      "content": {
        "key": {
          "element": "string",
          "content": "additionalProperties"
        },
        "value": {
          "element": "boolean",
          "meta": {
            "classes": {
              "element": "array",
              "content": [
                {
                  "element": "string",
                  "content": "boolean-json-schema"
                }
              ]
            }
          },
          "content": false
        }
      }
    },
    {
      "element": "member",
      "meta": {
        "classes": {
          "element": "array",
          "content": [
            {
              "element": "string",
              "content": "fixed-field"
            }
          ]
        }
      },
      "content": {
        "key": {
          "element": "string",
          "content": "patternProperties"
        },
        "value": {
          "element": "object",
          "meta": {
            "classes": {
              "element": "array",
              "content": [
                {
                  "element": "string",
                  "content": "json-schema-patternProperties"
                }
              ]
            }
          },
          "content": [
            {
              "element": "member",
              "meta": {
                "classes": {
                  "element": "array",
                  "content": [
                    {
                      "element": "string",
                      "content": "patterned-field"
                    }
                  ]
                }
              },
              "content": {
                "key": {
                  "element": "string",
                  "content": "[a-z]+"
                },
                "value": {
                  "element": "boolean",
                  "meta": {
                    "classes": {
                      "element": "array",
                      "content": [
                        {
                          "element": "string",
                          "content": "boolean-json-schema"
                        }
                      ]
                    }
                  },
                  "content": true
                }
              }
            }
          ]
        }
      }
    },
    {
      "element": "member",
      "meta": {
        "classes": {
          "element": "array",
          "content": [
            {
              "element": "string",
              "content": "fixed-field"
            }
          ]
        }
      },
      "content": {
        "key": {
          "element": "string",
          "content": "dependencies"
        },
        "value": {
          "element": "object",
          "meta": {
            "classes": {
              "element": "array",
              "content": [
                {
                  "element": "string",
                  "content": "json-schema-dependencies"
                }
              ]
            }
          },
          "content": [
            {
              "element": "member",
              "meta": {
                "classes": {
                  "element": "array",
                  "content": [
                    {
                      "element": "string",
                      "content": "patterned-field"
                    }
                  ]
                }
              },
              "content": {
                "key": {
                  "element": "string",
                  "content": "dep1"
                },
                "value": {
                  "element": "boolean",
                  "meta": {
                    "classes": {
                      "element": "array",
                      "content": [
                        {
                          "element": "string",
                          "content": "boolean-json-schema"
                        }
                      ]
                    }
                  },
                  "content": false
                }
              }
            }
          ]
        }
      }
    },
    {
      "element": "member",
      "meta": {
        "classes": {
          "element": "array",
          "content": [
            {
              "element": "string",
              "content": "fixed-field"
            }
          ]
        }
      },
      "content": {
        "key": {
          "element": "string",
          "content": "propertyNames"
        },
        "value": {
          "element": "boolean",
          "meta": {
            "classes": {
              "element": "array",
              "content": [
                {
                  "element": "string",
                  "content": "boolean-json-schema"
                }
              ]
            }
          },
          "content": true
        }
      }
    },
    {
      "element": "member",
      "meta": {
        "classes": {
          "element": "array",
          "content": [
            {
              "element": "string",
              "content": "fixed-field"
            }
          ]
        }
      },
      "content": {
        "key": {
          "element": "string",
          "content": "allOf"
        },
        "value": {
          "element": "array",
          "meta": {
            "classes": {
              "element": "array",
              "content": [
                {
                  "element": "string",
                  "content": "json-schema-allOf"
                }
              ]
            }
          },
          "content": [
            {
              "element": "boolean",
              "meta": {
                "classes": {
                  "element": "array",
                  "content": [
                    {
                      "element": "string",
                      "content": "boolean-json-schema"
                    }
                  ]
                }
              },
              "content": true
            }
          ]
        }
      }
    },
    {
      "element": "member",
      "meta": {
        "classes": {
          "element": "array",
          "content": [
            {
              "element": "string",
              "content": "fixed-field"
            }
          ]
        }
      },
      "content": {
        "key": {
          "element": "string",
          "content": "anyOf"
        },
        "value": {
          "element": "array",
          "meta": {
            "classes": {
              "element": "array",
              "content": [
                {
                  "element": "string",
                  "content": "json-schema-anyOf"
                }
              ]
            }
          },
          "content": [
            {
              "element": "boolean",
              "meta": {
                "classes": {
                  "element": "array",
                  "content": [
                    {
                      "element": "string",
                      "content": "boolean-json-schema"
                    }
                  ]
                }
              },
              "content": true
            }
          ]
        }
      }
    },
    {
      "element": "member",
      "meta": {
        "classes": {
          "element": "array",
          "content": [
            {
              "element": "string",
              "content": "fixed-field"
            }
          ]
        }
      },
      "content": {
        "key": {
          "element": "string",
          "content": "oneOf"
        },
        "value": {
          "element": "array",
          "meta": {
            "classes": {
              "element": "array",
              "content": [
                {
                  "element": "string",
                  "content": "json-schema-oneOf"
                }
              ]
            }
          },
          "content": [
            {
              "element": "boolean",
              "meta": {
                "classes": {
                  "element": "array",
                  "content": [
                    {
                      "element": "string",
                      "content": "boolean-json-schema"
                    }
                  ]
                }
              },
              "content": false
            }
          ]
        }
      }
    },
    {
      "element": "member",
      "meta": {
        "classes": {
          "element": "array",
          "content": [
            {
              "element": "string",
              "content": "fixed-field"
            }
          ]
        }
      },
      "content": {
        "key": {
          "element": "string",
          "content": "not"
        },
        "value": {
          "element": "boolean",
          "meta": {
            "classes": {
              "element": "array",
              "content": [
                {
                  "element": "string",
                  "content": "boolean-json-schema"
                }
              ]
            }
          },
          "content": false
        }
      }
    },
    {
      "element": "member",
      "meta": {
        "classes": {
          "element": "array",
          "content": [
            {
              "element": "string",
              "content": "fixed-field"
            }
          ]
        }
      },
      "content": {
        "key": {
          "element": "string",
          "content": "definitions"
        },
        "value": {
          "element": "object",
          "meta": {
            "classes": {
              "element": "array",
              "content": [
                {
                  "element": "string",
                  "content": "json-schema-definitions"
                }
              ]
            }
          },
          "content": [
            {
              "element": "member",
              "meta": {
                "classes": {
                  "element": "array",
                  "content": [
                    {
                      "element": "string",
                      "content": "patterned-field"
                    }
                  ]
                }
              },
              "content": {
                "key": {
                  "element": "string",
                  "content": "def1"
                },
                "value": {
                  "element": "boolean",
                  "meta": {
                    "classes": {
                      "element": "array",
                      "content": [
                        {
                          "element": "string",
                          "content": "boolean-json-schema"
                        }
                      ]
                    }
                  },
                  "content": true
                }
              }
            }
          ]
        }
      }
    }
  ]
}
`;

exports[`refractor elements JSONSchema should refract to semantic ApiDOM tree 1`] = `
(JSONSchemaDraft6Element
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (NumberElement))
  (MemberElement
    (StringElement)
    (NumberElement))
  (MemberElement
    (StringElement)
    (NumberElement))
  (MemberElement
    (StringElement)
    (NumberElement))
  (MemberElement
    (StringElement)
    (NumberElement))
  (MemberElement
    (StringElement)
    (NumberElement))
  (MemberElement
    (StringElement)
    (NumberElement))
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (JSONSchemaDraft6Element))
  (MemberElement
    (StringElement)
    (ArrayElement
      (JSONSchemaDraft6Element)))
  (MemberElement
    (StringElement)
    (NumberElement))
  (MemberElement
    (StringElement)
    (NumberElement))
  (MemberElement
    (StringElement)
    (BooleanElement))
  (MemberElement
    (StringElement)
    (JSONSchemaDraft6Element))
  (MemberElement
    (StringElement)
    (NumberElement))
  (MemberElement
    (StringElement)
    (NumberElement))
  (MemberElement
    (StringElement)
    (ArrayElement
      (StringElement)
      (StringElement)))
  (MemberElement
    (StringElement)
    (ObjectElement
      (MemberElement
        (StringElement)
        (JSONSchemaDraft6Element))))
  (MemberElement
    (StringElement)
    (JSONSchemaDraft6Element))
  (MemberElement
    (StringElement)
    (ObjectElement
      (MemberElement
        (StringElement)
        (JSONSchemaDraft6Element))))
  (MemberElement
    (StringElement)
    (ObjectElement
      (MemberElement
        (StringElement)
        (JSONSchemaDraft6Element))))
  (MemberElement
    (StringElement)
    (JSONSchemaDraft6Element))
  (MemberElement
    (StringElement)
    (ArrayElement
      (NumberElement)
      (StringElement)
      (NullElement)))
  (MemberElement
    (StringElement)
    (NumberElement))
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (ArrayElement
      (JSONSchemaDraft6Element)))
  (MemberElement
    (StringElement)
    (ArrayElement
      (JSONSchemaDraft6Element)))
  (MemberElement
    (StringElement)
    (ArrayElement
      (JSONSchemaDraft6Element)))
  (MemberElement
    (StringElement)
    (JSONSchemaDraft6Element))
  (MemberElement
    (StringElement)
    (ObjectElement
      (MemberElement
        (StringElement)
        (JSONSchemaDraft6Element))))
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (NumberElement))
  (MemberElement
    (StringElement)
    (ArrayElement
      (NumberElement)
      (StringElement)))
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (ArrayElement
      (LinkDescriptionElement)))
  (MemberElement
    (StringElement)
    (MediaElement))
  (MemberElement
    (StringElement)
    (BooleanElement)))
`;

exports[`refractor elements JSONSchema with alternate field values should refract to semantic ApiDOM tree 1`] = `
(JSONSchemaDraft6Element
  (MemberElement
    (StringElement)
    (BooleanElement))
  (MemberElement
    (StringElement)
    (JSONSchemaDraft6Element))
  (MemberElement
    (StringElement)
    (BooleanElement))
  (MemberElement
    (StringElement)
    (BooleanElement))
  (MemberElement
    (StringElement)
    (ObjectElement
      (MemberElement
        (StringElement)
        (ArrayElement
          (StringElement)
          (StringElement)))))
  (MemberElement
    (StringElement)
    (BooleanElement))
  (MemberElement
    (StringElement)
    (ArrayElement
      (StringElement)
      (StringElement))))
`;

exports[`refractor elements given fields of type JSONReference should refract to semantic ApiDOM tree 1`] = `
(JSONSchemaDraft6Element
  (MemberElement
    (StringElement)
    (JSONReferenceElement
      (MemberElement
        (StringElement)
        (StringElement))))
  (MemberElement
    (StringElement)
    (ArrayElement
      (JSONReferenceElement
        (MemberElement
          (StringElement)
          (StringElement)))))
  (MemberElement
    (StringElement)
    (JSONReferenceElement
      (MemberElement
        (StringElement)
        (StringElement))))
  (MemberElement
    (StringElement)
    (ObjectElement
      (MemberElement
        (StringElement)
        (JSONReferenceElement
          (MemberElement
            (StringElement)
            (StringElement))))))
  (MemberElement
    (StringElement)
    (JSONReferenceElement
      (MemberElement
        (StringElement)
        (StringElement))))
  (MemberElement
    (StringElement)
    (ObjectElement
      (MemberElement
        (StringElement)
        (JSONReferenceElement
          (MemberElement
            (StringElement)
            (StringElement))))))
  (MemberElement
    (StringElement)
    (ObjectElement
      (MemberElement
        (StringElement)
        (JSONReferenceElement
          (MemberElement
            (StringElement)
            (StringElement))))))
  (MemberElement
    (StringElement)
    (JSONReferenceElement
      (MemberElement
        (StringElement)
        (StringElement))))
  (MemberElement
    (StringElement)
    (ArrayElement
      (JSONReferenceElement
        (MemberElement
          (StringElement)
          (StringElement)))))
  (MemberElement
    (StringElement)
    (ArrayElement
      (JSONReferenceElement
        (MemberElement
          (StringElement)
          (StringElement)))))
  (MemberElement
    (StringElement)
    (ArrayElement
      (JSONReferenceElement
        (MemberElement
          (StringElement)
          (StringElement)))))
  (MemberElement
    (StringElement)
    (JSONReferenceElement
      (MemberElement
        (StringElement)
        (StringElement))))
  (MemberElement
    (StringElement)
    (ObjectElement
      (MemberElement
        (StringElement)
        (JSONReferenceElement
          (MemberElement
            (StringElement)
            (StringElement)))))))
`;

exports[`refractor elements given generic ApiDOM element should refract to semantic ApiDOM tree 1`] = `
(JSONSchemaDraft6Element
  (MemberElement
    (StringElement)
    (ObjectElement)))
`;
